Add a new section
Add footnote

Edit the title

--- a/notes.qmd
+++ b/notes.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Tutorial 7"
+title: "Tutorial Week 7"
 author: "Hoang Son Lai"
 format: html
 editor: visual
@@ -12,4 +12,8 @@ summary(mtcars)
 ```{r}
 library(dplyr)
 ```
+```{r}
+library(tidyverse)
+```
 
+Add footnote
